# mcp-extended-gitlab

./: .coveragerc  .dockerignore  .env.example  .gitignore  BREAKING_CHANGES.md  CLAUDE.md  CLAUDE_SETUP.md  DOCKER_SETUP.md  DOCKER_USAGE.md  Dockerfile  GITHUB_SETUP.md  INSTALLATION.md  LICENSE  MCP_CLIENT_SETUP.md  Makefile  QUICK_START_CLAUDE.md  README.md  TOOL_NAMES.md  docker-compose.yml  nginx.conf.example  pyproject.toml  pytest.ini  requirements-dev.txt  run_tests.py  setup_claude.sh  test_tool_context.py
.github/workflows/: docker-publish.yml
config/: README.md
docker/: Dockerfile.simple  README.md  docker-compose.dev.yml  docker-entrypoint.sh
docs/: PROJECT_STRUCTURE.md  README.md
docs/api/: README.md  unimplemented_apis_analysis.md
docs/guides/: INLINE_COMMENTS_GUIDE.md  README.md  (+2 more)
examples/: README.md  claude_config_example.json  claude_config_windows.json
mcp_extended_gitlab/: __init__.py  __main__.py  client.py  filtered_mcp.py  server.py  tool_registry.py  utils.py
scripts/: README.md  dev_tools.py  dump_tool_name_map.py  example_usage.py  list_tools.py  run_tool_tests.sh  test_all_tools.py  test_config.json  test_inline_comment.py  test_inline_comment_advanced.py  test_inline_comment_simple.py  test_minimal.py  test_mr_inline_comment_mcp.py  test_multiline_comment.py  test_suggestions.py  test_tools.py  verify_multiline.py  verify_multiline_comments.py  verify_simple.py  verify_suggestions.py
tests/: __init__.py  conftest.py  test_client.py  test_filtering.py  test_integration.py  test_openapi_compliance.py  test_tool_registration.py
(+53 files in other folders)
